<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/view1"
            style="@style/op_view_style"
            android:text="@string/hello_world" />

        <Button
            android:id="@+id/view2"
            style="@style/op_view_style"
            android:text="@string/hello_world2" />

        <Button
            android:id="@+id/view3"
            style="@style/op_view_style"
            android:text="@string/hello_world3" />

        <Button
            android:id="@+id/view4"
            style="@style/op_view_style"
            android:text="@string/hello_world4" />

        <Button
            android:id="@+id/view5"
            style="@style/op_view_style"
            android:text="@string/hello_world5" />

        <Button
            android:id="@+id/view6"
            style="@style/op_view_style"
            android:text="@string/hello_world6" />
    </LinearLayout>

</ScrollView>